 (Format: Year/Month/Day)
Changes for 1.0rc3:
*06/07/30:
   * List windows in iconbar in creation order (Mark)
     IconbarTool.cc/hh
*06/07/29:
   * Don't jump to remembered apps on restart (Mark)
     Remember.cc
   * Make _NET_CLIENT_LIST report windows in creation order - still need to fix
     _NET_CLIENT_LIST_STACKING (Mark)
     FocusControl.hh Ewmh.cc
   * Set _NET_WM_DESKTOP appropriately on remembered windows (Mark)
     Window.cc Ewmh.cc
*06/07/27:
   * Don't change the order of creating windows with transients on restart.
     Rather, just move the transient to the end of the list. This preserves the
     focused order and also reduces the complexity to O(n). (Mark)
     Screen.cc
*06/07/26:
   * Fixed torn menus so they don't close on exec items (Mark)
     FbTk/Menu.cc
   * Updated pt_PT translations (Thanx Antonio Gomes)
     nls/pt_PT/Translation.m
   * Added resource and menu item for maximizing over external tabs (Mark)
     Screen.cc/hh Window.cc
*06/07/25:
   * Fix so that focus doesn't revert away from command dialogs (Mark)
     fluxbox.cc/hh CommandDialog.cc
   * Fix background style item so that it works when the previous style
     didn't have one set (Mark)
     Screen.cc RootTheme.hh
*06/07/23:
   * Use a timer to make sure focus always reverts if possible (Mark)
     fluxbox.cc/hh and reverse patch from 06/07/20
*06/07/22:
   * Ewmh compliance updates: (Mark)
     - implemented _NET_WM_MOVERESIZE_CANCEL (new in version 1.4.draft-1)
     - move windows to last remaining workspace when a workspace is removed
     - implemented _NET_REQUEST_FRAME_EXTENTS
     Ewmh.cc/hh Workspace.cc/hh Screen.cc
*06/07/21:
   * Stop using fixed values for num/caps/scroll lock, and ignore scroll lock
     as a modifier (Mark)
     FbTk/KeyUtil.cc/hh
*06/07/20:
   * Fix _NET_WM_MOVERESIZE, bug #1525404 (Mark)
     Ewmh.cc
   * Properly revert focus when two windows close simultaneously (Mark)
     WinClient.cc/hh FbTk/FbWindow.hh fluxbox.cc Window.cc