@@ -1617,13 +1617,12 @@ void BScreen::setupConfigmenu(FbTk::Menu &menu) {
                FocusControl::MOUSEFOCUS);
 #undef _FOCUSITEM
 
-    focus_menu->insert(new TabFocusModelMenuItem("ClickTabFocus", focusControl(), 
-                                                 FocusControl::CLICKTABFOCUS, 
-                                                 save_and_reconfigure));
-    focus_menu->insert(new TabFocusModelMenuItem("MouseTabFocus", focusControl(), 
-                                                 FocusControl::MOUSETABFOCUS, 
-                                                 save_and_reconfigure));
-    
+    focus_menu->insert(new TabFocusModelMenuItem(_FB_XTEXT(Configmenu,
+        ClickTabFocus, "ClickTabFocus", "Click tab to focus windows"),
+        focusControl(), FocusControl::CLICKTABFOCUS, save_and_reconfigure));
+    focus_menu->insert(new TabFocusModelMenuItem(_FB_XTEXT(Configmenu,
+        MouseTabFocus, "MouseTabFocus", "Hover over tab to focus windows"),
+        focusControl(), FocusControl::MOUSETABFOCUS, save_and_reconfigure));   
 
     focus_menu->insert(new BoolMenuItem(_FB_XTEXT(Configmenu, 
                                                 AutoRaise,
