@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*06/08/02:
+   * Fix ClickTabFocus and MouseTabFocus in nls (Thanks Antonio Gomes)
+     Screen.cc
 *06/07/30:
    * List windows in iconbar in creation order (Mark)
      IconbarTool.cc/hh
